--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,10 @@
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<main>
+{% block title %}
+
+{% endblock %}
+{% block body %}
     <div>
         <code>User Agent: {{ request.headers.get('user-agent') }}</code>
     </div>
-    <div>
-        <ul>
-            {% for i in [1,2,3]|sort %}
-                <li>{{ i }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-</main>
-
-</body>
-</html>
+{% endblock %}
