--- a/templates/macros/usernameform.html
+++ b/templates/macros/usernameform.html
@@ -1,1 +1,12 @@
-{%%}
+{% macro usernameform(placeholder, submittext='Submit') %}
+<form method="get">
+    <label for="username-input">Input username</label>
+        <input
+            id="username-input"
+            type="text"
+            name="username"
+            placeholder="{{ placeholder }}"
+        >
+    <button type="submit">{{ submittext }}</button>
+</form>
+{% endmacro %}
